--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.414.0",
     "luxon": "^3.5.0",
+    "mysql2": "^3.11.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
