feat(Database coneccion): :sparkles: Database conection port 5000 using end point server

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend-scrum",
   "private": true,
   "version": "0.0.0",
+  "proxy": "http://localhost:5000",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -45,13 +46,14 @@
     "@tanstack/react-table": "^8.20.1",
     "@tanstack/table-core": "^8.20.1",
     "@types/luxon": "^3.4.2",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.8",
+    "express": "^4.21.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.414.0",
     "luxon": "^3.5.0",
