hotfix(Api back): :ambulance: Back end medio jala
medio jala

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.ignoreWords": [
         "Lfgs",
         "contrasena",
-        "proyects"
+        "opcion",
+        "proyects",
+        "puntaje"
     ]
 }
