--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "@tanstack/table-core": "^8.20.1",
     "@types/luxon": "^3.4.2",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.8",
@@ -62,6 +64,7 @@
     "ml-knn": "^3.0.0",
     "mysql2": "^3.14.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
