SprintAudit and backend modified

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MYSQL_HOST='localhost'
 MYSQL_USER='root'
-MYSQL_PASSWORD='Lfgs2002'
+MYSQL_PASSWORD='Sistemas.2025.'
 MYSQL_DATABASE='ScrumPlanner'
