--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
-    "dotenv": "^10.0.0",
-    "cors": "^7.0.0"
+    "nodemailer": "^6.10.0"
   }
 }
