--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "ts-standard": "^12.0.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.18.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "eslintConfig": {
     "extends": [
