--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "ml-knn": "^3.0.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.10.0"
   }
